tests/error/attr.py
class Human:
    def type(self):
        pass

human = Human()
human.typo()
